<resources>
    <string name="app_name">MVVM Dagger</string>
    <string name="application">Ayam Betutu Bali App</string>
    <string name="loginHelper">Please login to continue using this app</string>
    <string name="usernameText">Username / Email</string>
    <string name="passwordText">Password</string>
    <string name="toRegisterHelperText">Don\'t have an account?</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="registerHereText">Register Here</string>
    <string name="loginText">Login</string>
    <string name="fillFieldText">Please fill the field below</string>
    <string name="UsernameOnlyText">Username</string>
    <string name="DisplayNameText">Display Name</string>
    <string name="emailText">Email</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="phoneNumberText">Phone Number</string>
    <string name="registerText">Register</string>
    <string name="toLoginHelperText">Already have an account?</string>
    <string name="signInText">Sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="emptyOrderText">You have no order yet. Let\'s try our menu and make order now!</string>
    <string name="homeTitle">Ayam Betutu Bali App</string>
    <string name="title_activity_nav">NavActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_text">Change</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="current_password_text">Current Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_new_password_text">Confirm New Password</string>
    <string name="reservation_text">Reservation</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="people_text">People</string>
    <string name="check_availability_text">Check Availability</string>
    <string name="confirm_text">Confirm</string>
    <string name="confirmation_text">Confirmation</string>
    <string name="preference_file_key">com.future.restaurantayambetutu.PREFERENCE_FILE_KEY</string>
    <string name="permission_rationale">Gallery permission needed for core functionality</string>
    <string name="completed_order_text">Completed Order</string>
    <string name="on_going_order_text">On Going Order</string>
    <string name="approved_order_text">Approved Order</string>
    <string name="waiting_order_text">Waiting Order</string>
    <string name="waiting_text">Waiting</string>
    <string name="wrong_username_password">You have entered wrong Username / Password !</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="loading_text">Loading</string>
    <string name="something_went_wrong_text">Something went wrong. Please try again later.</string>
    <string name="passwords_too_short_text">Passwords must be at least 6 characters</string>
    <string name="passwords_do_not_match_text">Passwords do not match</string>
    <string name="display_name_required_text">Display Name is required</string>
    <string name="email_invalid_text">Email is not valid</string>
</resources>